--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Debut/vendor/imgui"]
 	path = Debut/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+[submodule "Debut/vendor/glm"]
+	path = Debut/vendor/glm
+	url = https://github.com/Groovounet/glm
