--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,29 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=596,54
-Size=32,558
+Pos=0,19
+Size=171,972
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Horizontal contents size demo window]
 Pos=60,60
 Size=333,323
 Collapsed=0
+
+[Window][Example: Log]
+ViewportPos=144,283
+ViewportId=0xBF126D42
+Size=500,400
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,48 Size=1920,972 Split=X Selected=0xE927CF2F
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=171,701 Selected=0xE927CF2F
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1107,701 CentralNode=1
 
