--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=1283,347
+ViewportPos=1356,667
+ViewportId=0xE927CF2F
+Size=757,480
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Horizontal contents size demo window]
 Pos=60,60
@@ -21,8 +21,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1283,720
+Size=1920,991
 Collapsed=0
 
 [Window][Example: Console]
@@ -32,16 +31,14 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Test]
-Pos=475,426
+Pos=967,369
 Size=275,48
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=261,222 Size=1283,701 Split=Y Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1283,347 Selected=0xE927CF2F
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1283,352 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1418,972 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
-      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=500,972 Selected=0xBF126D42
+DockSpace     ID=0x3BC79352 Pos=0,48 Size=1920,972 Split=X Selected=0xE927CF2F
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1418,972 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1920,670 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,300 Selected=0x46B5E99C
+  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=500,972 Selected=0xBF126D42
 
